--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -311,8 +311,7 @@ jobs:
 
   release:
     name: Create Release
-#    needs: [ build-linux-x86_64, build-linux-arm64, build-macos-x86_64, build-macos-arm64, build-windows-x86_64 ]
-    needs: [ build-linux-x86_64 ]
+    needs: [ build-linux-x86_64, build-linux-arm64, build-macos-x86_64, build-macos-arm64, build-windows-x86_64 ]
     if: github.event.inputs.create_release == 'true' || github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
@@ -342,16 +341,16 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: |
-#            artifacts/nexus-network-macos-arm64
-#            artifacts/nexus-network-macos-arm64.sha256
-#            artifacts/nexus-network-macos-x86_64
-#            artifacts/nexus-network-macos-x86_64.sha256
-#            artifacts/nexus-network-linux-arm64
-#            artifacts/nexus-network-linux-arm64.sha256
+            artifacts/nexus-network-macos-arm64
+            artifacts/nexus-network-macos-arm64.sha256
+            artifacts/nexus-network-macos-x86_64
+            artifacts/nexus-network-macos-x86_64.sha256
+            artifacts/nexus-network-linux-arm64
+            artifacts/nexus-network-linux-arm64.sha256
             artifacts/nexus-network-linux-x86_64
             artifacts/nexus-network-linux-x86_64.sha256
-#            artifacts/nexus-network-windows-x86_64.exe
-#            artifacts/nexus-network-windows-x86_64.exe.sha256
+            artifacts/nexus-network-windows-x86_64.exe
+            artifacts/nexus-network-windows-x86_64.exe.sha256
           draft: false
           prerelease: false
           generate_release_notes: true
