--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -311,7 +311,8 @@ jobs:
 
   release:
     name: Create Release
-    needs: [ build-linux-x86_64, build-linux-arm64, build-macos-x86_64, build-macos-arm64, build-windows-x86_64 ]
+#    needs: [ build-linux-x86_64, build-linux-arm64, build-macos-x86_64, build-macos-arm64, build-windows-x86_64 ]
+    needs: [ build-linux-x86_64 ]
     if: github.event.inputs.create_release == 'true' || github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
@@ -338,7 +339,7 @@ jobs:
 
       - name: Create Release
         id: create_release
-        uses: softprops/action-gh-release@v3
+        uses: softprops/action-gh-release@v2
         with:
           files: |
             artifacts/nexus-network-macos-arm64
